--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ rust-version = "1.56"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eframe = "0.17.0"
+eframe = {version = "0.17.0", features = ["persistence"]}
 
 serde = { version = "1", features = ["derive"], optional = true }
 
