--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ eframe = {version = "0.17.0", features = ["persistence"]}
 serde = { version = "1", features = ["derive"], optional = true }
 
 chrono = "0.4.19"
+web3_rust_wrapper = "0.2.1"
 
 [features]
 default = []
