--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bellatrixUI"
+name = "bellatrix_ui"
 version = "0.1.0"
 authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
 edition = "2021"
@@ -13,6 +13,13 @@ eframe = {version = "0.17.0", features = ["persistence"]}
 serde = { version = "1", features = ["derive"], optional = true }
 
 chrono = "0.4.19"
+
+# web3_rust_wrapper = "0.2.1"
+web3_rust_wrapper = {version = "0.2.1", path = "../web3helper"}
+dotenv = "0.15.0"
+# async-std = {version = "1.10.0", features = ["unstable"]}
+
+async-std = { version = "1.10.0", features = ["tokio1"] }
 
 [features]
 default = []
