--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rust-version = "1.56"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+web3 = "0.18.0"
 eframe = {version = "0.17.0", features = ["persistence"]}
 
 serde = { version = "1", features = ["derive"], optional = true }
@@ -15,6 +16,8 @@ serde = { version = "1", features = ["derive"], optional = true }
 chrono = "0.4.19"
 
 # web3_rust_wrapper = "0.2.1"
+# NOTE(elsuizo:2022-03-15): hago que apunte a la carpeta del repo en lugar del
+# que esta en crates.io porque asi es mas facil hacerle cambios sobre la marcha
 web3_rust_wrapper = {version = "0.2.1", path = "../web3helper"}
 dotenv = "0.15.0"
 # async-std = {version = "1.10.0", features = ["unstable"]}
